[gd_scene load_steps=24 format=2]

[ext_resource path="res://GamePlay.gd" type="Script" id=1]
[ext_resource path="res://Border.gd" type="Script" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Control.gd" type="Script" id=4]
[ext_resource path="res://SourceSerifPro-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://SourceSerifPro-It.otf" type="DynamicFontData" id=6]
[ext_resource path="res://texture.png" type="Texture" id=7]
[ext_resource path="res://field.png" type="Texture" id=8]
[ext_resource path="res://figure1.png" type="Texture" id=9]
[ext_resource path="res://figure2.png" type="Texture" id=10]
[ext_resource path="res://figure4.png" type="Texture" id=11]
[ext_resource path="res://figure3.png" type="Texture" id=12]
[ext_resource path="res://levelup.wav" type="AudioStream" id=13]
[ext_resource path="res://hit.wav" type="AudioStream" id=14]
[ext_resource path="res://bgm_mid.ogg" type="AudioStream" id=15]
[ext_resource path="res://bgm_high.ogg" type="AudioStream" id=16]
[ext_resource path="res://bgm_low.ogg" type="AudioStream" id=17]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 369.088, 67.6957, 0, 0, 0, 0, 978.028, 67.6957, 0, 0, 0, 0, 978.028, 570.688, 0, 0, 0, 0, 369.088, 570.688, 0, 0, 0, 0, 369.088, 67.6957 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 367.031, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 300.548 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "3",
"speed": 5.0
} ]

[node name="GamePlay" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( -2.08582, -18.1431 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 369.088, 67.6957 )
rotation = -1.94945e-006

[node name="Border" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border"]
position = Vector2( 663.456, 584.253 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Border"]
position = Vector2( 669.628, 17.4865 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Border"]
position = Vector2( 340.471, 304.47 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Border"]
position = Vector2( 1009.07, 307.556 )
shape = SubResource( 3 )

[node name="Player" type="Node2D" parent="."]
position = Vector2( 669.687, 302.413 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_left = 50.0
margin_top = 54.0
margin_right = 287.0
margin_bottom = 556.0
script = ExtResource( 4 )

[node name="Label_gold" type="Label" parent="Control"]
margin_left = 12.0
margin_top = 6.0
margin_right = 104.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.929412, 0.843137, 0.227451, 1 )
text = "Gold:"

[node name="Display_gold" type="Label" parent="Control"]
margin_left = 150.0
margin_top = 6.0
margin_right = 228.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.929412, 0.843137, 0.227451, 1 )
text = "0"
align = 1

[node name="Label_health" type="Label" parent="Control"]
margin_left = 12.5483
margin_top = 56.1184
margin_right = 104.548
margin_bottom = 101.118
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.733333, 0.188235, 0.188235, 1 )
text = "Health:"

[node name="Display_health" type="Label" parent="Control"]
margin_left = 150.0
margin_top = 56.1184
margin_right = 228.0
margin_bottom = 101.118
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.733333, 0.188235, 0.188235, 1 )
text = "10"
align = 1

[node name="Label_time" type="Label" parent="Control"]
margin_left = 12.9253
margin_top = 106.0
margin_right = 118.925
margin_bottom = 147.116
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.14902, 0.14902, 0.14902, 1 )
text = "Time:"

[node name="Message" type="Label" parent="Control"]
margin_left = -32.0
margin_top = 437.0
margin_right = 261.0
margin_bottom = 473.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.14902, 0.14902, 0.14902, 1 )
text = "Everybody starts with nothing."
align = 1

[node name="Display_time" type="Label" parent="Control"]
margin_left = 150.0
margin_top = 106.0
margin_right = 234.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.14902, 0.14902, 0.14902, 1 )
text = "0"
align = 1

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 518.821, 302.806 )
scale = Vector2( 2.06606, 1.22602 )
z_index = -10
texture = ExtResource( 7 )

[node name="BgBorder" type="Sprite" parent="."]
position = Vector2( 657.048, 289.426 )
scale = Vector2( 0.96, 1.08 )
z_index = -5
texture = ExtResource( 8 )

[node name="Figure" type="AnimatedSprite" parent="."]
position = Vector2( 156.816, 350.643 )
scale = Vector2( 0.681824, 0.698057 )
frames = SubResource( 6 )
animation = "1"

[node name="Sound_lvup" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 540, 0 )
stream = ExtResource( 13 )

[node name="Sound_hit" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 540, 0 )
stream = ExtResource( 14 )

[node name="BGM_mid" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 540, 0 )
stream = ExtResource( 15 )

[node name="BGM_high" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 540, 0 )
stream = ExtResource( 16 )

[node name="BGM_low" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 540, 0 )
stream = ExtResource( 17 )
[connection signal="body_entered" from="Border" to="Border" method="_on_Border_body_entered"]
